# drf-api-permissions-postgres

./: docker-compose.yml  pyproject.toml
tools/: permissions.py  serializer.py  views.py
tools/migrations/: 0001_initial.py
tools_api/: settings.py  urls.py
